template/22_swap_before_template_out.txt
emplate$ g++ 22_swap_before_template.cpp 
22_swap_before_template.cpp: In function ‘void swap(std::string&, std::string&)’:
22_swap_before_template.cpp:22:17: error: ‘a’ was not declared in this scope
   22 |   string temp = a;
      |                 ^
22_swap_before_template.cpp:23:7: error: ‘b’ was not declared in this scope
   23 |   a = b;
      |       ^
template$ 

